# EEES-array

simd-toolchain/: .hgignore  CMakeLists.txt  INSTALL  README
simd-toolchain/.hg/: dirstate  hgrc  undo.desc
simd-toolchain/.hg/cache/: branchheads-served  tags
simd-toolchain/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
simd-toolchain/.hg/store/data/: _c_make_lists.txt.i  _i_n_s_t_a_l_l.i  _r_e_a_d_m_e.i  ~2ehgignore.i
simd-toolchain/benchmark/: CMakeLists.txt
simd-toolchain/benchmark/djpeg/: run.json
simd-toolchain/benchmark/djpeg/djpeg-scalar/: Makefile  color.c  fast_int_idct.c  fileio.c  fio_alt.c  fio_alt.h  huffman.c  jpeg.h  jpegtobmp.c  parse.c  table_vld.c  utils.c
simd-toolchain/benchmark/ffos/: run.json
simd-toolchain/benchmark/ffos/ffos-scalar/: bounding-box.c  center-of-gravity.c  erosion.c  ffos.c  ffos.h  input.c  main.c  otsu.c  utils.c
simd-toolchain/benchmark/ffos/ffos-vector/: Makefile  ffos.t  ffos_auto.t  ffos_python.py  oled.pgm  template_helper.py
simd-toolchain/benchmark/scalar/: run.json
simd-toolchain/benchmark/scalar/crc32/: crc32.c
simd-toolchain/benchmark/scalar/des/: des.c
simd-toolchain/benchmark/scalar/fir5/: fir5.c
simd-toolchain/benchmark/scalar/fir5-nr/: fir5.c
simd-toolchain/benchmark/scalar/histogram256/: histogram256.c
simd-toolchain/benchmark/scalar/histogram256-u/: histogram256.c
simd-toolchain/benchmark/scalar/mat-vec-mul/: in_data.h  mat-vec-mul.c
simd-toolchain/benchmark/scalar/yuv2rgb.mod/: yuv2rgb.mod.c
simd-toolchain/benchmark/vector/binarization/: Makefile  binarization.t  binarization_auto.t
simd-toolchain/benchmark/vector/colorconversion/: Makefile  colorconversion.t  colorconversion_auto.t
simd-toolchain/benchmark/vector/convolution/: Makefile  convolution.t  convolution_auto.t
simd-toolchain/benchmark/vector/erosion/: Makefile  erosion.t  erosion_auto.t
simd-toolchain/benchmark/vector/fir/: Makefile  fir.t  fir_auto.t
simd-toolchain/benchmark/vector/max/: Makefile  max.t  max_auto.t
simd-toolchain/benchmark/vector/mirror/: Makefile  mirror.t  (+1 more)
simd-toolchain/cmake/: ES-SIMD-Config.cmake  ES-SIMDModules.cmake  FindIcarusVerilog.cmake  FindLemon.cmake  FindPyLibs.cmake  FindSphinx.cmake
simd-toolchain/data/asic-lib-sample/: tsmc65lp.json  tsmc90lp.json
simd-toolchain/docs/: CMakeLists.txt  Doxygen.cfg.in  Doxygen.intro  PythonBinding.rst  conf.py  index.rst
simd-toolchain/docs/ToolGuide/: s-cc.rst  s-cg.rst  s-run-sim.rst  s-sim.rst
simd-toolchain/extra/gtest/: CMakeLists.txt  README
simd-toolchain/extra/jsoncpp/: CMakeLists.txt
simd-toolchain/include/: Config.hh.cmake  Version.hh
simd-toolchain/include/DataTypes/: ASMLine.hh  BasicTypes.hh  ContainerTypes.hh  EnumFactory.hh  Error.hh  FileLocation.hh  GenericTree.hh  MemDataSection.hh  Object.hh  SIRDataType.hh  SIROpcode.hh  TargetOpcode.hh
simd-toolchain/include/Graph/: DiGraph.hh  Graph.hh  GraphDefs.hh
simd-toolchain/include/Program/: ProcessingDriver.hh
simd-toolchain/include/SIR/: Pass.hh  SIRBasicBlock.hh  SIRConstant.hh  SIRDataObject.hh  SIRExpr.hh  SIRFunction.hh  SIRInstruction.hh  SIRKernel.hh  SIRLoop.hh  SIRMemLocation.hh  SIRModule.hh  SIRParser.hh  SIRRegister.hh  SIRValue.hh
simd-toolchain/include/Simulation/: CycleAccurateSimulator.hh  SimCore.hh  SimDefs.hh  SimMemoryCmd.hh  SimObjectBase.hh  SimOperand.hh  SimOperation.hh  SimPipelineStage.hh  SimProcessor.hh  SimProgramSection.hh  SimSRAM.hh  SimScalarCore.hh  SimSyncChannel.hh  SimVectorCore.hh
simd-toolchain/include/Transform/: CommonSIRPasses.hh  DeadFunctionElimination.hh  SIRCallSiteProcessing.hh  SIRFinalize.hh  SIRFunctionLayout.hh  SIRLocalOpt.hh  SIRSimplfyBranch.hh  SplitSIRCallBlock.hh
simd-toolchain/include/Utils/: BitUtils.hh  CmdUtils.hh  DbgUtils.hh  FileUtils.hh  InlineUtils.hh  LogUtils.hh  StringUtils.hh  Timer.hh  VerilogMemInit.hh
simd-toolchain/lib/: CMakeLists.txt
simd-toolchain/lib/DataTypes/: CMakeLists.txt  ContainerTypes.cc  Error.cc  SIRDataType.cc  SIROpcode.cc  TargetOpcode.cc
simd-toolchain/lib/Program/: CMakeLists.txt  ProcessingDriver.cc  SIRModuleVerifier.cc  SIRModuleVerifier.hh
simd-toolchain/lib/SIR/: CMakeLists.txt  Pass.cc  SIRBasicBlock.cc  SIRConstant.cc  SIRDataObject.cc  SIRExpr.cc  SIRFunction.cc  SIRInstruction.cc  SIRKernel.cc  SIRLoop.cc  SIRMemLocation.cc  SIRModule.cc  SIRParser.cc  SIRRegister.cc  SIRValue.cc
simd-toolchain/lib/Simulation/: CMakeLists.txt  CycleAccurateSimulator.cc  SimCore.cc  SimMemoryCmd.cc  SimObjectBase.cc  SimProcessor.cc  SimProgramSection.cc  SimSRAM.cc  SimSyncChannel.cc
simd-toolchain/lib/Transform/: CMakeLists.txt  DeadFunctionElimination.cc  SIRCallSiteProcessing.cc  SIRFinalize.cc  SIRFunctionLayout.cc  SIRLocalOpt.cc  SIRSimplfyBranch.cc  SplitSIRCallBlock.cc
simd-toolchain/lib/Utils/: BitUtils.cc  CMakeLists.txt  CmdUtils.cc  DbgUtils.cc  FileUtils.cc  StringUtils.cc  Timer.cc  VerilogMemInit.cc
simd-toolchain/py-binding/: CMakeLists.txt
simd-toolchain/py-binding/solver_codegen/: CMakeLists.txt  solver_codegen.cc  solver_codegen.py
simd-toolchain/py-binding/solver_sim/: CMakeLists.txt  solver_sim.cc  solver_sim.py
simd-toolchain/solver/: CMakeLists.txt  README
simd-toolchain/solver/arch/: baseline-16b-5stage-bypass.json  baseline-32b-4stage-128pe.json  baseline-32b-4stage.json  baseline-32b-5stage-128pe.json  baseline-32b-5stage-bypass.json
simd-toolchain/solver/html/: func.html
simd-toolchain/solver/include/: stdlib.h
simd-toolchain/solver/lib-src/: string.c
simd-toolchain/test/: CMakeLists.txt
simd-toolchain/test/application/: CMakeLists.txt  README
simd-toolchain/tools/: CMakeLists.txt
simd-toolchain/tools/s-as/: CMakeLists.txt  s-as.cc
simd-toolchain/tools/s-cg/: CMakeLists.txt  s-cg.cc
simd-toolchain/tools/s-sim/: CMakeLists.txt  s-sim.cc
simd-toolchain/unittest/: CMakeLists.txt
simd-toolchain/unittest/SIR/: CMakeLists.txt  SIRBBTest.cc  SIRExprTest.cc  SIRFuncTest.cc  SIRInstrTest.cc
simd-toolchain/unittest/Utils/: BitUtilsTest.cc  CMakeLists.txt  StringUtilsTest.cc
(+1742 files in other folders)
